--- a/css/sass/system.scss
+++ b/css/sass/system.scss
@@ -1,5 +1,5 @@
 @import 	'compass';
-
+@import 	'susy';		//comment out to exclude susy --> http://susydocs.oddbird.net/en/latest/ for more info
 
 
 //	core/base level stuff -- most of your work is done here
