--- a/http/sass/core/_normalize.scss
+++ b/http/sass/core/_normalize.scss
@@ -1,8 +1,11 @@
-// normalize.css v2.1.3 | MIT License | git.io/normalize 
+// normalize.css v2.1.3 | MIT License | git.io/normalize
+
+// turning off some linters for this file:
+// scss-lint:disable ColorVariable, VendorPrefixes, QualifyingElement
 
 // ==========================================================================
 // HTML5 display definitions
-// ========================================================================== 
+// ==========================================================================
 
 
 // Correct `block` display not defined in IE 8/9.
@@ -19,16 +22,15 @@ main,
 nav,
 section,
 summary {
-    display: block;
+  display: block;
 }
 
 
 // Correct `inline-block` display not defined in IE 8/9.
-
 audio,
 canvas,
 video {
-    display: inline-block;
+  display: inline-block;
 }
 
 
@@ -36,8 +38,8 @@ video {
 // Remove excess height in iOS 5 devices.
 
 audio:not([controls]) {
-    display: none;
-    height: 0;
+  display: none;
+  height: 0;
 }
 
 
@@ -46,14 +48,14 @@ audio:not([controls]) {
 
 [hidden],
 template {
-    display: none;
+  display: none;
 }
 
 
 
 // ==========================================================================
 // Base
-// ========================================================================== 
+// ==========================================================================
 
 
 // 1. Set default font family to sans-serif.
@@ -61,16 +63,16 @@ template {
 //    user zoom.
 
 html {
-    font-family: sans-serif; // 1
-    -ms-text-size-adjust: 100%; // 2
-    -webkit-text-size-adjust: 100%; // 2
+  font-family: sans-serif; // 1
+  -ms-text-size-adjust: 100%; // 2
+  -webkit-text-size-adjust: 100%; // 2
 }
 
 
 // Remove default margin.
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 
@@ -80,17 +82,17 @@ body {
 // ==========================================================================
 
 
-// Remove the gray background color from active links in IE 10.
+// Remove the gray background color from active links in IE 1.
 
 a {
-    background: transparent;
+  background: transparent;
 }
 
 
 // Address `outline` inconsistency between Chrome and other browsers.
 
 a:focus {
-    outline: thin dotted;
+  outline: thin dotted;
 }
 
 
@@ -98,29 +100,29 @@ a:focus {
 
 a:active,
 a:hover {
-    outline: 0;
+  outline: 0;
 }
 
 
 
 // ==========================================================================
 // Typography
-// ========================================================================== 
+// ==========================================================================
 
 
 // Address variable `h1` font-size and margin within `section` and `article`
 // contexts in Firefox 4+, Safari 5, and Chrome.
 
 h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+  font-size: 2em;
+  margin: .67em 0;
 }
 
 
 // Address styling not present in IE 8/9, Safari 5, and Chrome.
 
 abbr[title] {
-    border-bottom: 1px dotted;
+  border-bottom: 1px dotted;
 }
 
 
@@ -128,31 +130,31 @@ abbr[title] {
 
 b,
 strong {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 
 // Address styling not present in Safari 5 and Chrome.
 
 dfn {
-    font-style: italic;
+  font-style: italic;
 }
 
 
 // Address differences between Firefox and other browsers.
 
 hr {
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    height: 0;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
 }
 
 
 // Address styling not present in IE 8/9.
 
 mark {
-    background: #ff0;
-    color: #000;
+  background: #ff0;
+  color: #000;
 }
 
 
@@ -162,29 +164,29 @@ code,
 kbd,
 pre,
 samp {
-    font-family: monospace, serif;
-    font-size: 1em;
+  font-family: monospace, serif;
+  font-size: 1em;
 }
 
 
 // Improve readability of pre-formatted text in all browsers.
 
 pre {
-    white-space: pre-wrap;
+  white-space: pre-wrap;
 }
 
 
 // Set consistent quote types.
 
 q {
-    quotes: "\201C" "\201D" "\2018" "\2019";
+  quotes: '\201C' '\201D' '\2018' '\2019';
 }
 
 
 // Address inconsistent and variable font size in all browsers.
 
 small {
-    font-size: 80%;
+  font-size: 80%;
 }
 
 
@@ -192,38 +194,38 @@ small {
 
 sub,
 sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sup {
-    top: -0.5em;
+  top: -.5em;
 }
 
 sub {
-    bottom: -0.25em;
+  bottom: -.25em;
 }
 
 
 
 // ==========================================================================
 // Embedded content
-// ========================================================================== 
+// ==========================================================================
 
 
 // Remove border when inside `a` element in IE 8/9.
 
 img {
-    border: 0;
+  border: 0;
 }
 
 
 // Correct overflow displayed oddly in IE 9.
 
 svg:not(:root) {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 
@@ -236,7 +238,7 @@ svg:not(:root) {
 // Address margin not present in IE 8/9 and Safari 5.
 
 figure {
-    margin: 0;
+  margin: 0;
 }
 
 
@@ -249,9 +251,9 @@ figure {
 // Define consistent border, margin, and padding.
 
 fieldset {
-    border: 1px solid #c0c0c0;
-    margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: .35em .625em .75em;
 }
 
 
@@ -259,8 +261,8 @@ fieldset {
 // 2. Remove padding so people aren't caught out if they zero out fieldsets.
 
 legend {
-    border: 0; // 1
-    padding: 0; // 2
+  border: 0; // 1
+  padding: 0; // 2
 }
 
 
@@ -272,9 +274,9 @@ button,
 input,
 select,
 textarea {
-    font-family: inherit; // 1
-    font-size: 100%; // 2
-    margin: 0; // 3
+  font-family: inherit; // 1
+  font-size: 100%; // 2
+  margin: 0; // 3
 }
 
 
@@ -283,7 +285,7 @@ textarea {
 
 button,
 input {
-    line-height: normal;
+  line-height: normal;
 }
 
 
@@ -294,22 +296,22 @@ input {
 
 button,
 select {
-    text-transform: none;
+  text-transform: none;
 }
 
 
-// 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+// 1. Avoid the WebKit bug in Android 4..* where (2) destroys native `audio`
 //    and `video` controls.
 // 2. Correct inability to style clickable `input` types in iOS.
 // 3. Improve usability and consistency of cursor style between image-type
 //    `input` and others.
 
 button,
-html input[type="button"], // 1 
-input[type="reset"],
-input[type="submit"] {
-    -webkit-appearance: button; // 2 
-    cursor: pointer; // 3 
+html input[type='button'], // 1
+input[type='reset'],
+input[type='submit'] {
+  -webkit-appearance: button; // 2
+  cursor: pointer; // 3
 }
 
 
@@ -317,17 +319,17 @@ input[type="submit"] {
 
 button[disabled],
 html input[disabled] {
-    cursor: default;
+  cursor: default;
 }
 
 
-// 1. Address box sizing set to `content-box` in IE 8/9/10.
-// 2. Remove excess padding in IE 8/9/10.
+// 1. Address box sizing set to `content-box` in IE 8/9/1.
+// 2. Remove excess padding in IE 8/9/1.
 
-input[type="checkbox"],
-input[type="radio"] {
-    box-sizing: border-box; // 1 
-    padding: 0; // 2 
+input[type='checkbox'],
+input[type='radio'] {
+  box-sizing: border-box; // 1
+  padding: 0; // 2
 }
 
 
@@ -335,20 +337,20 @@ input[type="radio"] {
 // 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
 //    (include `-moz` to future-proof).
 
-input[type="search"] {
-    -webkit-appearance: textfield; // 1
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box; // 2
-    box-sizing: content-box;
+input[type='search'] {
+  -webkit-appearance: textfield; // 1
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box; // 2
+  box-sizing: content-box;
 }
 
 
 // Remove inner padding and search cancel button in Safari 5 and Chrome
 // on OS X.
 
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
+  -webkit-appearance: none;
 }
 
 
@@ -356,8 +358,8 @@ input[type="search"]::-webkit-search-decoration {
 
 button::-moz-focus-inner,
 input::-moz-focus-inner {
-    border: 0;
-    padding: 0;
+  border: 0;
+  padding: 0;
 }
 
 
@@ -365,8 +367,8 @@ input::-moz-focus-inner {
 // 2. Improve readability and alignment in all browsers.
 
 textarea {
-    overflow: auto; // 1 
-    vertical-align: top; // 2 
+  overflow: auto; // 1
+  vertical-align: top; // 2
 }
 
 
@@ -379,6 +381,6 @@ textarea {
 // Remove most spacing between table cells.
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
